Fixed some styles (in dark mode) (#16)
* fix: Fixed some styles

* ci: Updated the nix.conf rv-nix-serve address

* fix: Fixed the footer text

* feat: Improved the dark mode styles

* fix: Fixed the dark mode nav bar bg

* fix: Fixed footer text

--- a/static_content/assets/sass/_utilities.scss
+++ b/static_content/assets/sass/_utilities.scss
@@ -120,6 +120,12 @@
   }
 }
 
+@media screen and (prefers-color-scheme: dark) {
+  hr {
+    border-top-color: $dark-mode-border-color;
+  }
+}
+
 .bg-green-light {
   background: #d7f5e3;
 }
