--- a/static_content/assets/sass/components/_nav.scss
+++ b/static_content/assets/sass/components/_nav.scss
@@ -77,7 +77,7 @@
 
   @media screen and (prefers-color-scheme: dark) {
     color: $dark-mode-fg;
-    background-color: $dark-mode-bg;
+    background-color: lighten($color: $dark-mode-bg, $amount: 6%);
     box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
       0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
   }
