--- a/static_content/assets/sass/main.scss
+++ b/static_content/assets/sass/main.scss
@@ -862,6 +862,11 @@ video {
   display: block;
   width: 80%;
   max-width: 1024px;
+
+  @media screen and (prefers-color-scheme: dark) {
+    background-color: lighten($dark-mode-bg, 8%);
+    color: $dark-mode-fg;
+  }
 }
 
 video.modal-content {
@@ -1285,7 +1290,7 @@ h6 a {
   }
 
   @media screen and (prefers-color-scheme: dark) {
-    background-color: lighten($dark-mode-bg, 4);
+    background-color: lighten($dark-mode-bg, 8%);
     color: $dark-mode-fg;
     border-color: $dark-mode-border-color;
   }
